2003-11-15  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/text-context.c: Fixed a bug which caused segmentation fault
	when using input method.

2003-11-12  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/document.c: (sp_document_get_version): Add pointer guard.

	* src/sp-gradient.c (sp_gradient_build):
	Moved sp_object_read_attr to pre build-children, so we can access
	attribute value from children while building itself

	* src/sp-pattern.c (sp_pattern_build): Ditto
	
	* src/sp-text.c (sp_text_build): Ditto
	(sp_tspan_build): Ditto

2003-11-10  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-pathops.c: Handful of new code

2003-11-08  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/document.h: (SP_VERSION_*): Moved from sp-object.h again
	(sp_document_get_version): Moved from sp-object.h

	* src/document.c: (sp_document_get_version): Moved from sp-object.c
	Thanks Lauris for your advice.

2003-11-08  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-object.h: (SP_VERSION_*): New enum type
	(sp_object_get_version): New method come from sp-text.c

	* src/sp-object.c: (sp_object_get_version): New method,
	I'll rewrite sp-text later.

2003-11-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-object.h: Put generic children link here

	* src/sp-object.c (sp_object_invoke_children_update): New method
	(sp_object_invoke_children_modified): Ditto

	* src/libnr/nr-stroke.c (nr_svl_stroke_build_finish_subpath): Fail,
	if only one point, fixes crash on miniature paths

2003-11-03  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/text-context.c: (sp_text_context_root_handler): Add
	GDK_Home, GDK_End key binding

	* src/sp-text.c: (sp_text_start_of_line): New method
	(sp_text_end_of_line): New method

	* src/sp-text.h: Ditto

2003-10-31  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-glyphs.h: New file

	* src/libnrtype/nr-glyphs.c: New file

	* src/libnr/nr-pathops.h: New file (do not look!)

	* src/libnr/nr-pathops.c: New file (do not look!)
